# translator-app

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
src/: main.py
typings/translate/: __init__.pyi  constants.pyi  exceptions.pyi  main.pyi  translate.pyi
typings/translate/providers/: __init__.pyi  base.pyi  deepl.pyi  libre.pyi  microsoft.pyi  mymemory_translated.pyi
